@@ -15,3 +15,11 @@
 - Some organization of the code and directories started.
 - The main program wrapper, racoonFlyFish, introduced.
 - README and LICENSE introduced, etc.
+- Files introduced into utils dir: chimeraPolish, defaults.txt, extractFastxEntries.py, flyePolish, helper-functions.txt, medakaPolish,  raconPolish, versions.txt
+- logo made and added.
+- More info on: extractFastxEntries.py
+	- This script was originally from https://github.com/JohnUrban/sciaratools2 and from https://github.com/JohnUrban/sciara-project-tools before that.
+	- It was copied from SciaraTools2 on 2022-10-08 into the Utils directory of racoonFlyFish as a helper script.
+	- This version is not under any active development! It is "frozen" as is here and works appropriately with these scripts.
+	- See SciaraTools2 for most up-to-date version.
+
